# worldometer

./: .gitignore  .readthedocs.yml  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: docs_requirements.txt
docs/source/: conf.py  index.rst  worldometer.rst  worldometer_api.rst  worldometer_core.rst
docs/source/_static/: style.css
docs/source/worldometer/: geography.rst  index.rst  population.rst  world.rst
tests/test_scraper/: test_parser.py  test_utils.py
worldometer/: __about__.py  __init__.py  api.py  const.py  core.py  models.py
worldometer/scraper/: __init__.py  browser.py  consts.py  controller.py  exceptions.py  http_requester.py  parser.py  utils.py
worldometer/world/: __init__.py  counters.py  country_codes.py  ometers.py
worldometer/world/geography/: __init__.py  countries.py  largest_countries.py
worldometer/world/population/: __init__.py  asia.py  by_region.py  by_year.py  countries_by_population.py  largest_cities.py  most_populous_countries.py  projections.py  regions.py  world_population_by_year.py
