[tool.poetry]
name = "worldometer"
version = "2.0.0"
description = "Get live, population, geography, projected, and historical data from around the world."
authors = ["Matheus Felipe <matheusfelipeog@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <=3.11"
requests-html = "^0.10.0"
pandas = "^2.1.1"
html5lib = "^1.1"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.poetry.group.doc.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
